# qh

./: QH_AU_FINAL_SUMMARY.md  README.md  pyproject.toml  setup.cfg
docsrc/: index.rst
examples/: qh_au_integration_example.py
misc/: qh_wip.ipynb
misc/docs/: QH_AU_INTEGRATION_REPORT.md
qh/: __init__.py  app.py  au_integration.py  base.py  config.py  core.py  endpoint.py  main.py  rules.py  stores_qh.py  testing.py  trans.py  types.py  util.py
qh/scrap/: simple_fastapi_dispatch.py  store_dispatch_1.py  store_dispatch_2.py
qh/scrap/fastapi_refactors/: fastapi_refactor_1.py  fastapi_refactor_base.py
qh/tests/: test_base.py  test_openapi_client.py  test_round_trip.py  test_store_access.py  test_stores_qh.py
