[metadata]
root_url = https://github.com/i2mint/
license = apache-2.0
author = OtoSense
version = 0.0.1
description = Quick Http web-service construction
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
	http
	web-service
	framework
name = qh
display_name = qh

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	py2http

